<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="24sp"
        android:shrinkColumns="1" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView android:text="@string/video_title" />

            <TextView android:id="@+id/video_title" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView android:text="@string/video_datetaken" />

            <TextView android:id="@+id/video_datetaken" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView android:text="@string/video_duration" />

            <TextView android:id="@+id/video_duration" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView android:text="@string/video_size" />

            <TextView android:id="@+id/video_size" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView android:text="@string/video_path" />

            <TextView android:id="@+id/video_path" />
        </TableRow>
    </TableLayout>
</ScrollView>
