<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
	android:layout_height="wrap_content" 
    android:orientation="vertical" >
    
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#FF22B1F3"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipstr"
            android:textSize="16sp" />
        
        <TextView
            android:id="@+id/textView3"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/tipscontent"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/tipscheckbox" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#FF22B1F3"/>
                
        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/tipsok" 
            android:textSize="16sp"/>

</LinearLayout>