<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/white">

  <!--
    <include layout="@layout/title_classification" />
-->

    <RelativeLayout
        android:id="@+id/program_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp" >

           <ImageView
       			android:id="@+id/program_title_img"
       			android:layout_width="100dp"
       			android:layout_height="75dp"
       			android:layout_alignParentLeft="true"
       			android:layout_alignParentTop="true" android:layout_marginLeft="14dp"/>
 

        <RatingBar
            android:id="@+id/program_title_rate"
            style="@style/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_alignLeft="@+id/program_title_name"
            android:layout_below="@+id/program_title_res"
            android:layout_marginTop="3dp"
            android:isIndicator="true" />

        <TextView
            android:id="@+id/program_title_name"
            style="@style/pro_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/program_title_img"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/program_title_img" />

        <TextView
            android:id="@+id/program_title_time"
            style="@style/pro_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/program_title_name"
            android:layout_below="@id/program_title_name"
            android:text="@string/list_vlong" />

        <TextView
            android:id="@+id/program_title_res"
            style="@style/pro_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/program_title_name"
            android:layout_below="@+id/program_title_time"
            android:text="@string/prog_comefrom" />
    </RelativeLayout>

       <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal" 
                android:layout_marginLeft="20dp">

                <Button
                    android:id="@+id/program_title_play"
                    android:layout_width="87dp"
                    android:layout_height="36dp"
                    android:background="@drawable/selector_play" 
                    android:text="@string/play_movie" 
                    android:textColor="@color/black" 
                    android:drawableLeft="@drawable/ic_play"
                    android:layout_centerInParent="true"/>
                <!-- <ImageView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@drawable/ic_play" 
	                android:layout_centerVertical="true"
	                android:layout_marginLeft="4dp"/> -->

            </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="29dp"
                android:text="@string/video_intro"
                android:paddingLeft="14dp"
                
                android:background="@drawable/bg_02"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"></TextView>

            <TextView
                android:id="@+id/program_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="100"
                android:padding="10dp"
                android:textSize="15sp"
                android:textColor="@color/black" 
                />
			<LinearLayout
                android:id="@+id/link_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/text_bar_bg"
                android:paddingLeft="10dp" 
                android:visibility="gone">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/link_title"
                    android:gravity="center_vertical"
                    android:textSize="20sp" />

            </LinearLayout>
            <ListView
                android:id="@+id/program_link"
                android:layout_width="fill_parent"
                android:layout_height="400dp"
                android:fadeScrollbars="true"
                android:fadingEdge="none"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>