<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/online_title"        
        android:layout_width="wrap_content"    
        android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true"
        android:text="@string/online_name"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:singleLine="true" 
        android:layout_toLeftOf="@+id/tab_refresh"
        android:layout_centerVertical="true"/>  
         
    <LinearLayout
        android:id="@+id/tab_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.0"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/tab_more"
       >

        <ImageView
            android:id="@+id/tab_refresh_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/ic_refresh_normal" 
            android:gravity="center" 
            android:layout_gravity="center_horizontal"/>
        	
        <TextView
            android:id="@+id/tab_refresh_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-4dip"
            android:gravity="center_horizontal"
            android:text="@string/tab_refresh"
            android:textColor="@android:color/white" android:lines="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.0"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dip"
        android:layout_marginLeft="15dip"
        >

        <ImageView
            android:id="@+id/tab_more_img"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="2"
 	     android:background="@drawable/ic_viewmore_normal" 
            android:gravity="center" 
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tab_more_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="-4dip"
            android:layout_gravity="center_horizontal"           
            android:text="@string/tab_more"
            android:textColor="@android:color/white" />
    </LinearLayout>


</RelativeLayout>